[Autofill] Fix username suggestion display when field is already filled.

The problem was that the placeholder visibility was not updated in this
particular case. It used to be set when values were suggested for the
first time but usernames are filled in the page without a preview.

The placeholder's visibility is now updated everytime the view is
updated.

Bug: 777819
Change-Id: I9b85553f8186f05330207bd083e3fe7fb11395e9