third_party/WebKit/Source/core/html/forms/HTMLInputElement.cpp
@@ -1052,12 +1052,14 @@ void HTMLInputElement::SetValueForUser(const String& value) {
 void HTMLInputElement::SetSuggestedValue(const String& value) {
   if (!input_type_->CanSetSuggestedValue())
     return;
+
   needs_to_update_view_value_ = true;
   TextControlElement::SetSuggestedValue(SanitizeValue(value));
   SetNeedsStyleRecalc(
       kSubtreeStyleChange,
       StyleChangeReasonForTracing::Create(StyleChangeReason::kControlValue));
   input_type_view_->UpdateView();
+  // UpdatePlaceholderVisibility();
 }
 
 void HTMLInputElement::SetEditingValue(const String& value) {
