third_party/WebKit/Source/core/html/forms/TextFieldInputType.cpp
@@ -464,6 +464,7 @@ void TextFieldInputType::UpdatePlaceholderText() {
   if (placeholder_text.IsEmpty()) {
     if (placeholder)
       placeholder->remove(ASSERT_NO_EXCEPTION);
+    LOG(ERROR) << "Removing placeholder";
     return;
   }
   if (!placeholder) {
@@ -471,6 +472,8 @@ void TextFieldInputType::UpdatePlaceholderText() {
         HTMLDivElement::Create(GetElement().GetDocument());
     placeholder = new_element;
     placeholder->SetShadowPseudoId(AtomicString("-webkit-input-placeholder"));
+    LOG(ERROR) << "Setting the visibility "
+               << GetElement().IsPlaceholderVisible();
     placeholder->SetInlineStyleProperty(
         CSSPropertyDisplay,
         GetElement().IsPlaceholderVisible() ? CSSValueBlock : CSSValueNone,
@@ -525,8 +528,6 @@ void TextFieldInputType::SpinButtonStepUp() {
 }
 
 void TextFieldInputType::UpdateView() {
-  // The suggested values are now shown using placeholder elements, so there is
-  // nothing to do here for the suggested values.
   if (GetElement().SuggestedValue().IsEmpty() &&
       GetElement().NeedsToUpdateViewValue()) {
     // Update the view only if needsToUpdateViewValue is true. It protects
@@ -536,8 +537,8 @@ void TextFieldInputType::UpdateView() {
     // updated. In this case, updateView() is called but we should not
     // update the view value.
     GetElement().SetInnerEditorValue(VisibleValue());
-    GetElement().UpdatePlaceholderVisibility();
   }
+  GetElement().UpdatePlaceholderVisibility();
 }
 
 void TextFieldInputType::FocusAndSelectSpinButtonOwner() {
